@@ -38,7 +38,8 @@ xymon (4.4.0-alpha5) unstable; urgency=low
      addition to the normal http testing semantics. This allows page content
      to be used for downstream processing, or snapshotting of last data in
      the event of a status change. See data= and clienthttp= in hosts.cfg(5)
-
+   * Add "noprefer" tag in hosts.cfg to force lowest-preference for a host    
+     configured multiple times.
    
    * FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
      write) to xymonnet
